@@ -16,7 +16,7 @@ AC_PROG_CC
 AC_DISABLE_STATIC
 AC_PROG_LIBTOOL
 
-AM_PATH_PYTHON(2.2.2)
+AM_PATH_PYTHON(2.3.0)
 dnl PYTHON_DEVEL comes from SWIG 1.3.20+ and detects needed -I, -L and -l:
 BKL_PYTHON_DEVEL
 
