@@ -2,9 +2,12 @@
 Version 0.2.2
 --------------
 
+- Python >= 2.3 is now required to run Bakefile
 - added --touch option to bakefile
 - fixed isdefined() to work with conditional variables (Francesco Montorsi)
 - added --dry-run option to bakefile_gen too
+- added optional support for (un)installation targets in Windows
+  formats (Francesco Montorsi)
 
 
 Version 0.2.1
